--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"BrownMaterial_Theme","description":"Clean Brown Material Theme","author":"DevilsTheAvenged","version":"1.2"}*//{}
+//META{"name":"BrownMaterial_Theme","description":"Clean Brown Material Theme","author":"DevilsTheAvenged","version":"1.3"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200');
 *:not(code) {
     font-family: 'Montserrat' !important;
@@ -295,125 +295,125 @@
 /* Button Tooltips */
 /* Mute Tooltip */
 /* Zoom Level 50% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 1331px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 1337px;"] {
        left: 198px !important;
        top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 120.933px; top: 969.178px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.933px; top: 973.679px;"] {
        left: 196px !important;
        top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 854px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 858px;"] {
        left: 196px !important;
        top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 120.996px; top: 794.262px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.996px; top: 798.012px;"] {
        left: 198px !important;
        top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 120.998px; top: 694.681px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.998px; top: 698.014px;"] {
        left: 198px !important;
        top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 614px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 617px;"] {
        left: 198px !important;
        top: 655.566px !important;
 }
 /* Deafen Tooltip */
 /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 1331px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 1337px;"] {
      left: 222px !important;
      top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.429px; top: 969.178px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.429px; top: 973.679px;"] {
      left: 222px !important;
      top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.5px; top: 854px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.5px; top: 858px;"] {
      left: 222px !important;
      top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 145.988px; top: 794.262px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 145.988px; top: 798.012px;"] {
      left: 222px !important;
      top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.495px; top: 694.681px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.495px; top: 698.014px;"] {
      left: 222px !important;
      top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 614px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 617px;"] {
      left: 222px !important;
      top: 655.566px !important;
 }
 /* UnMute Tooltip */
 /* Zoom Level 50% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 1331px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 1337px;"] {
        left: 187px !important;
        top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.933px; top: 969.178px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.933px; top: 973.679px;"] {
        left: 187px !important;
        top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.5px; top: 854px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.5px; top: 858px;"] {
        left: 187px !important;
        top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.496px; top: 794.262px;"] {
+[class="tooltip tooltip-top tooltip-black"][style="left: 109.496px; top: 798.012px;"] {
        left: 187px !important;
        top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.998px; top: 694.681px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.998px; top: 698.014px;"] {
        left: 187px !important;
        top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 614px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 617px;"] {
        left: 187px !important;
        top: 655.566px !important;
 }
 /* UnDeafen  Tooltip */
 /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 1331px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 1337px;"] {
      left: 215px !important;
      top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.429px; top: 969.178px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.429px; top: 973.679px;"] {
      left: 215px !important;
      top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style="left: 137px; top: 854px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 858px;"] {
      left: 215px !important;
      top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.488px; top: 794.262px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.488px; top: 798.012px;"] {
      left: 215px !important;
      top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.995px; top: 694.681px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.995px; top: 698.014px;"] {
      left: 215px !important;
      top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 614px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 617px;"] {
      left: 215px !important;
      top: 655.566px !important;
 }
@@ -972,16 +972,16 @@ a,
 .theme-dark .searchFilter-1fJ0cd {
     background-color: #292b2d;
 }
-.theme-dark .search-popout {
+.theme-dark .searchPopout-38pRYh {
     box-shadow: none;
 }
-.search-popout {
+.theme-dark .searchPopout-38pRYh {
     background-color: #292b2d;
     border: none;
     border-radius: 0px;
     box-shadow: none;
 }
-.search-popout .option:after,
+.option-1MvVr1:after,
 .search-popout .option:before {
     background: #292b2d;
 }
@@ -991,24 +991,26 @@ a,
 .search-popout .option.selected {
     background-color:#242526;
 }
-.search-popout .option.selected:after {
+.option-1MvVr1.selected-_bTXUG:after,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background: #242526;
 }
+.theme-dark .searchOption-vKNX73 .filter-3kZ3tT, .theme-dark .option-1MvVr1 .filter-3kZ3tT {
+   color: white !important;
+   font-weight: bold;
+}
 .search-popout .option.selected:before,
-.search-popout .option.selected:after {
+.option-1MvVr1.selected-_bTXUG:after,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background-color:  #242526;
 }
-.search-popout .date-picker .date-picker-hint .hint-value {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz .hintValue-45YyWZ {
     background-color: #4E342E;
 }
-.search-popout .date-picker .date-picker-hint .hint-value:hover {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz .hintValue-45YyWZ:hover {
     background-color: #3E2723;
 }
-.search-popout .date-picker {
-    border-radius: 0;
-    border-top: none;
-    box-shadow: none;
-}
+
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker, .theme-light .calendarPicker-16Q6sl .react-datepicker {
     background-color: #212121;
 }
@@ -1027,7 +1029,7 @@ a,
     background-color: #212121;
     border-color: transparent;
 }
-.search-popout .date-picker .date-picker-hint {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz {
     border-top: none;
 }
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day--outside-month, 
@@ -1054,9 +1056,8 @@ a,
 .theme-dark .react-datepicker__day.react-datepicker__day--sat.react-datepicker__day--outside-month:hover {
      background-color: #263238 !important;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after {
-    background-color: transparent;
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after {
+   background-color: transparent;
 }
 .theme-dark .react-datepicker__day.react-datepicker__day--sun.react-datepicker__day--disabled.react-datepicker__day--outside-month:hover,
 .theme-dark .react-datepicker__day.react-datepicker__day--mon.react-datepicker__day--disabled.react-datepicker__day--outside-month:hover,
@@ -1076,12 +1077,11 @@ a,
 }
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover, 
 .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover {
-    background-color: #8D6E63;
+    background-color: #8D6E63 !important;
     color: #fff;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day:hover,  
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day:hover {
-    background-color: #795548;
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover, .theme-dark .calendarPicker-16Q6sl .react-datepicker__day:hover {
+    background-color: #795548 !important;
     color: #fff;
 }
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled,
